fix errores version mobile

--- a/src/Components/ListaTareas/styles.css
+++ b/src/Components/ListaTareas/styles.css
@@ -1,3 +1,8 @@
+#todo-list-section{
+    padding-bottom: 50px;
+}
+
+
 #todo-list-container{
     display: flex;
     justify-content: center;
@@ -195,7 +200,6 @@
         right: 0;
         bottom: 0;
         margin: auto;
-        padding-bottom: 50px;
     }
 
     #todo-list{
@@ -242,7 +246,6 @@
         justify-content: center;
         align-items: center;
         border-radius: 5px;
-        margin-bottom: 50px;
     }
 
     #todo-items-filter-mobile.light-mode{
